--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,12 @@
 
     <string name="open_drawer">Open navigation drawer</string>
     <string name="close_drawer">Close navigation drawer</string>
+    <string name="add_item">Add Item</string>
+    <string name="remove_item">Remove Item</string>
+    <string name="name">Name</string>
+    <string name="parent">Parent</string>
+    <string name="save">Save</string>
+    <string name="edit_item">Edit Item</string>
+    <string name="calories">Cal</string>
 
 </resources>
