--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,12 +88,18 @@
     <string name="parent">Parent</string>
     <string name="save">Save</string>
     <string name="edit_item">Edit Item</string>
-    <string name="calories">Cal</string>
+    <string name="calories">Calories</string>
     <string name="edit_user_profile">Edit User Profile</string>
     <string name="current_weight">Current Weight</string>
     <string name="method">Method</string>
     <string name="kg"> Kg</string>
     <string name="kg_week"> Kg Per Week</string>
     <string name="you_need_to_consume">You need to consume</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="your_meals">Your Meals</string>
+    <string name="category">Category</string>
+    <string name="serving_in_pcs">Serving in pcs</string>
+    <string name="serving_in_gram">Serving in gram</string>
+    <string name="add_to_food_diary">Add To Food Diary</string>
 
 </resources>
