--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,8 @@
     <string name="add_to_food_diary">Add To Food Diary</string>
     <string name="pcs"> pcs</string>
     <string name="gram"> grams</string>
+    <string name="dinner">Dinner</string>
+    <string name="snacks">Snacks</string>
+    <string name="lunch">Lunch</string>
 
 </resources>
